// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoInfobox renders collapsed 1`] = `
<div>
  <div
    className="video-info-box"
  >
    <Image
      as="img"
      circular={true}
      className="channel-image"
      src="http://via.placeholder.com/48x48"
      ui={true}
    />
    <div
      className="video-info"
    >
      <div
        className="channel-name"
      >
         Channel Name
      </div>
      <div
        className="video-publication-date"
      >
        Thu 24, 2017
      </div>
    </div>
    <Button
      as="button"
      className="subscribe"
      color="youtube"
    >
      91.5K Subscribe
    </Button>
    <div
      className="video-description"
    >
      <div
        className="collapsed"
      >
        <p>
          p1
        </p>
        <p>
          p2
        </p>
        <p>
          p3
        </p>
        <p>
          p4
        </p>
        <p>
          p5
        </p>
      </div>
      <Button
        as="button"
        compact={true}
        onClick={[Function]}
      >
        Show More
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`VideoInfobox renders expanded 1`] = `
<div>
  <div
    className="video-info-box"
  >
    <Image
      as="img"
      circular={true}
      className="channel-image"
      src="http://via.placeholder.com/48x48"
      ui={true}
    />
    <div
      className="video-info"
    >
      <div
        className="channel-name"
      >
         Channel Name
      </div>
      <div
        className="video-publication-date"
      >
        Thu 24, 2017
      </div>
    </div>
    <Button
      as="button"
      className="subscribe"
      color="youtube"
    >
      91.5K Subscribe
    </Button>
    <div
      className="video-description"
    >
      <div
        className="expanded"
      >
        <p>
          p1
        </p>
        <p>
          p2
        </p>
        <p>
          p3
        </p>
        <p>
          p4
        </p>
        <p>
          p5
        </p>
      </div>
      <Button
        as="button"
        compact={true}
        onClick={[Function]}
      >
        Show Less
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
